--- a/app/contact/page.module.scss
+++ b/app/contact/page.module.scss
@@ -1,33 +1,29 @@
-.contactContainer {
-  container: contact / inline-size;
-}
-
 .contact {
   display: grid;
   grid-template-columns: auto 1fr;
-  gap: 20px;
+  gap: 10px;
 }
 
-.links {
-  padding: 20px;
-  width: 350px;
+.social {
+  width: 340px;
   background-size: cover !important;
+  border-radius: 5px;
   color: #ffffff;
+  padding: 20px;
+  gap: 20px;
   & a {
-    color: #ffffff;
-    border: 1px solid var(--mantine-color-dark-light);
-    border-radius: 5px;
+    border: 2px solid var(--mantine-color-dark-light);
     &:hover {
       background: rgba($color: #000000, $alpha: 0.1);
     }
   }
 }
 
-@container contact (width < 767px) {
+@container main-view (width < 767px) {
   .contact {
     grid-template-columns: 1fr;
   }
-  .links {
+  .social {
     width: 100%;
   }
 }
